styles.css
/* General */
:root {
    --bitcoin-orange: #F7931A;
    --soft-orange:#FFE9D5;
	--secondary-blue:#FFE9D5; 
	--soft-blue:#E7F5FF;
	--warm-black:#201E1C;
	--black:#282623;
	--grey:#BABABA;
	--off-white:#FAF8F7;
	--just-white:#FFFFFF;
}
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    scroll-behavior: smooth;
}
html {
    font-size: 62.5%;
    font-family: 'DM Sans', sans-serif;
}
/* Header */
header {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 100%;
    min-width: 320px;
    height: 334px;
    text-align: center;
    background: linear-gradient(207.8deg, #201E1C 16.69%, #F7931A 100%);
}
header img {
    width: 150px;
    height: 24px;
    margin-top: 60px;
    align-self: center;
}
.header--title-container {
    width: 90%;
    min-width: 288px;
    max-width: 900px;
    height: 218px;
    margin-top: 40px;
    text-align: center;
    align-self: center;
}
.header--title-container h1 {
    font-size: 2.4rem;
    font-weight: bold;
    line-height: 2.6rem;
    color: var(--just-white);
}
.header--title-container p {
    margin-top: 24px;
    font-size: 1.4rem;
    font-weight: 500;
    line-height: 1.8rem;
    color: var(--soft-orange);
}
.header--title-container .header--button {
    position: absolute;
    left: calc(50% - 118px);
    top: 270px;
    display: block;
    margin-top: 34px;
    padding: 14px;
    width: 229px;
    height: 48px;
    background-color: var(--off-white);
    /* Shadow */
    box-shadow: 0px 4px 8px rgba(89, 73, 30, 0.16);
    border: none;
    border-radius: 5px;
    font-size: 1.4rem;
    font-weight: bold;
    text-decoration: none;
    color: var(--black);
}
.header--button span {
    display: inline-block;
    width: 14px;
    height: 8px;
    margin-left: 10px;
    background-image: url('./assets/icons/down-arrow.svg');
    
}
/* Main */
main {
    width: 100%;
    height: auto;
    background-color: #282623;
}
.main-exchange-container {
    width: 100%;
    height: auto;
    padding-top: 80px;
    padding-bottom: 30px;
    text-align: center;
}
.main-exchange-container--title {
    width: 90%;
    min-width: 288px;
    max-width: 900px;
    margin: 0 auto;
}
.main-exchange-container .backgroundImg {
    width: 200px;
    height: 200px;
    margin: 0 auto;
    margin-bottom: 50px;
    background-image: url(./assets/img/Bitcoin.svg);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}
.main-exchange-container h2 {
    margin-bottom: 30px;
    font-size: 2.4rem;
    font-weight: bold;
    line-height: 2.4rem;
    color: var(--off-white);
}
.main-exchange-container--title p {
    margin-bottom: 30px;
    font-size: 1.4rem;
    font-weight: 500;
    line-height: 1.6rem;
    color: #757575;
}
/* Table container */
.main-tables-container {
    display: flex;
    gap: 24px;
    overflow-x: scroll;
    margin: 52px auto;
    padding: 0 25%;
    overscroll-behavior-x: contain;
    scroll-snap-type: x proximity;
}
.tables-container, .tables-container2 {
    scroll-snap-align: center;
    justify-self: center;
    min-width: 240px;
    height: 290px;
    margin: 12px 0;
    padding: 12px 0 0 0;
    font-family: 'Inter', sans-serif;
    border-radius: 15px;
    border: 1px solid #3b3b3b;
    box-shadow: 8px 8px 4px #000;
}
.tables-container--title {
    font-size: 1.8rem;
    font-weight: bold;
    line-height: 2.3rem;
}
.tables-container--title-orange {
    color: var(--bitcoin-orange);
}
.tables-container--title-blue {
    color: #1a9af7;
}
.tables-container--update-text {
    font-size: 1.2rem;
    color: var(--grey);
}
/* Grid Tables */
.tables-container-info {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: repeat(4, 60px);
    align-items: center;
}
.tables-container-info--name {
    font-size: 1.6rem;
    color: #B5B0AC;
}
.tables-container-info--price {
    font-size: 1.4rem;
    font-weight: normal;
    color: #757575;
}
.tables-container-info--icon {
    width: 1.1rem;
    height: .6rem;
    padding-left: .5rem;
}
/* Benefits */
.main-product-detail {
    position: relative;
    width: 100%;
    min-width: 320px;
    height: auto;
    padding: 20px 10px;
    background-color: #171615;
}
.product-detail--batata-logo {
    position: absolute;
    width: 40px;
    height: 25px;
    top: -10px;
    left: calc(50% - 20px);
    background-image: url(./assets/icons/batata.svg);

}
.product-detail--title {
    width: 90%;
    min-width: 288px;
    height: auto;
    margin: 0 auto;
    margin-top: 50px;
    text-align: center;
}
.product-detail--title h2 {
    margin-bottom: 20px;
    font-size: 2.4rem;
    font-weight: bold;
    line-height: 2.6rem;
    color: var(--just-white);
}
.product-detail--title p {
    margin-bottom: 20px;
    font-size: 1.4rem;
    font-weight: 500;
    line-height: 1.8rem;
    color: #808080;
}
.product-detail--card {
    width: 90%;
    min-width: 288px;
    max-width: 400px;
    min-height: 150px;
    margin: 15px auto;
    padding: 14px;
    background-color: #2b2b2b;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.16);
}
.icon {
    display: inline-block;
    width: 20px;
    height: 20px;
    margin-bottom: 10px;
}
/* Plans */
.product--card-title {
    margin-bottom: 15px;
    font-size: 1.8rem;
    font-weight: bold;
    line-height: 1.8rem;
    color: var(--just-white);
}
.product--card-body {
    font-size: 1.4rem;
    font-weight: 500;
    line-height: 1.8rem;
    color: #808080;
}
.bitcoin-img-container {
    width: 100%;
    min-width: 320px;
    height: 50vh;
    background-image: url('./assets/img/bitcoinbaby2x.jpg');
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    text-align: center;
}
.bitcoin-img-container h2 {
    padding-top: 60px;
    font-size: 2.4rem;
    font-weight: bold;
    line-height: 2.6rem;
    color: var(--just-white);
}
.main-plans-container {
    width: 100%;
    min-width: 320px;
    padding-bottom: 70px;
    text-align: center;
}
.plans--title {
    width: 90%;
    min-width: 288px;
    height: auto;
    margin: 0 auto;
    margin-bottom: 50px;
}
.plans--title h2 {
    padding-top: 50px;
    font-size: 2.4rem;
    font-weight: bold;
    line-height: 2.6rem;
    color: var(--off-white);
}
.plans--title p {
    padding-top: 30px;
    font-size: 1.4rem;
    font-weight: 500;
    line-height: 1.8rem;
    color: #c5c5c5;
}
/* Slider */
.plans-container--slider {
    display: flex;
    height: 316px;
    padding: 0 40px;
    overflow-x: scroll;
    overscroll-behavior-x: contain;
    scroll-snap-type: x proximity;
}
/* Cards */
.plans-container--card {
    position: relative;
    scroll-snap-align: center;
    width: 70%;
    min-width: 190px;
    max-width: 300px;
    height: 250px;
    margin: 50px 15px 0;
    padding: 0 15px;
    background-color: #282623;
    border-radius: 10px;
    box-shadow: 0 5px 8px #000;
    border: 1px solid #3b3b3b;
}
.recomendado {
    position: absolute;
    width: 120px;
    height: 32px;
    top: -15px;
    left: calc(50% - 60px);
    font-size: 1.4rem;
    border-radius: 8px;
    color: var(--just-white);
    padding: 8px;
}
.recomendado-grey {
    background-color: #464646;
}
.recomendado-blue {
    background-color: #126eaf;
}
.recomendado-orange {
    background-color: var(--bitcoin-orange);
}
.plan-card--title {
    padding-top: 30px;
    font-size: 1.4rem;
    font-weight: 500;
    line-height: 1.8rem;
    color: var(--off-white);
}
.plan-card--price {
    padding: 5px 0;
    font-size: 5.2rem;
    font-weight: bold;
    color: var(--off-white);
}
.plan-card--price span {
    font-size: 1.2rem;
    font-weight: 300;
    vertical-align: 26px;
}
.plan-card--saving {
    font-size: 1.2rem;
    color: #757575;
}
.plan-card--ca {
    width: 150px;
    height: 48px;
    margin-top: 20px;
    background-color: #282623;
    border: 2px solid var(--bitcoin-orange);
    border-radius: 10px;
    font-family: 'DM Sans', sans-serif;
    font-size: 1.4rem;
    font-weight: bold;
    line-height: 1.8rem;
    color: var(--off-white);
}
.plan-card--ca span {
    display: inline-block;
    width: 20px;
    height: 20px;
    background-image: url('./assets/icons/orange-right-arrow.svg');
    vertical-align: text-bottom;
}
/* Footer */
footer {
    display: flex;
    width: 100%;
    height: 150px;
    background-color: var(--bitcoin-orange);
}
footer section {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 50%;
}
footer .left ul {
    font-size: 1.4rem;
    font-weight: 500;
    line-height: 1.8rem;
    list-style: none;
}
.left li {
    margin: 10px 0;
}
.left a {
    text-decoration: none;
    color: var(--just-white);
}

